--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/portfolio.css">
 </head>
 <body>
     <header>
-
+<nav> 
+    <h3 class="nav-title">Ma<span class="primary-color">r</span>y</h3>
+   <ul>
+    <li><a href="">Portfolio</a></li>
+    <li><a href="">Blogs</a></li>
+    <li><button class="primary-btn">Hire Me</button></li>
+   </ul>
+</nav>
     </header>
     <main>
 
