--- a/index.html
+++ b/index.html
@@ -1,30 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/portfolio.css">
 </head>
-<body>
-    <header>
-<nav> 
-    <h3 class="nav-title">Ma<span class="primary-color">r</span>y</h3>
-   <ul>
-    <li><a href="">Portfolio</a></li>
-    <li><a href="">Blogs</a></li>
-    <li><button class="primary-btn">Hire Me</button></li>
-   </ul>
-</nav>
-    </header>
-    <main>
 
+<body>
+    <header class="header-class">
+        <nav>
+            <h3 class="nav-title">Ma<span class="primary-color">r</span>y</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blogs</a></li>
+                <li><button class="primary-btn">Hire Me</button></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore fugit, vero expedita quas cumque
+                    accusantium adipisci amet voluptatem autem cum rem, eius, tempore itaque ab? Veniam dolores totam
+                    est,
+                    ducimus fugiat corporis magnam natus! Neque, ullam!</p>
+                <button class="primary-btn">Download CV</button>
+                <button class="primary-btn">Contact</button>
+            </div>
+            <img src="images/hardy.png" alt="">
+        </div>
+    </header>
+
+
+    <main>
+     <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+     </section>   
     </main>
+
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
