--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
                   
                 </div>
             </div>
+            <div class="download-cv">
+                <button class="primary-btn">Dawnload CV</button>
+            </div>
         </section>
 
     </main>
