--- a/index.html
+++ b/index.html
@@ -159,11 +159,29 @@
                 <button class="primary-btn">Dawnload CV</button>
             </div>
         </section>
-
     </main>
 
     <footer>
-
+<div class="footer-container">
+    <div class="footer-column">
+        <h3 class="section-title">Lets Connect</h3>
+        <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+        <div class="social-links">
+            <a href=""><img src="images/icons/facebook.png" alt=""></a>
+            <a href=""><img src="images/icons/insta.png" alt=""></a>
+            <a href=""><img src="images/icons/twitter.png" alt=""></a>
+        </div>
+    </div>
+    <div class="footer-column">
+        <h3 class="section-title">Let's Message me</h3>
+        <form class="contact" action="">
+            <input type="text" name="" placeholder="Your name" id="">
+            <input type="email" name="" placeholder="Your Email" id="">
+            <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+          <input class="primary-btn" type="submit" value="Submit">
+        </form>
+    </div>
+</div>
     </footer>
 </body>
 
