--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
     </div>
     <div class="footer-column">
-        <h3 class="section-title">Let's Message me</h3>
+        <h3 class="section-title">Let's Message me Right Now!</h3>
         <form class="contact" action="">
             <input type="text" name="" placeholder="Your name" id="">
             <input type="email" name="" placeholder="Your Email" id="">
